Closed
Bug 337571
Opened 20 years ago
Closed 19 years ago
Fix the inability to edit keywords on folders in the outline view
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.5
People
(Reporter: alqahira, Assigned: bugzilla-graveyard)
References
Details
(Keywords: fixed1.8.1, polish)
Attachments
(1 file)
|
1.10 KB,
patch
|
stuart.morgan+bugzilla
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
We don't allow folders to have keywords, so the keyword field in the Folder view of the info panel should be disabled.
Right now it's not in the tab loop, but you can still click there, add a keyword, and watch it be discarded when you leave the field :P
We should disable the field entirely (and maybe make the label grey?) until such time as we actually support keywords for folders/tab groups, if ever (I thought there was a bug, but I can't find it).
Blocking bug 325880 because this *is* just a .nib change :)
Comment 1•20 years ago
|
||
Huh? Folders and tab groups can have keywords. I have lots, and they work fine.
Comment 2•20 years ago
|
||
There is a sort of opposite bug though:
http://lxr.mozilla.org/mozilla/source/camino/src/bookmarks/BookmarkOutlineView.mm#93
prevents editing the keyword of a folder from the table view, and should be removed.
| Assignee | ||
Comment 3•20 years ago
|
||
What Stuart said. Someone remind me tonight and I'll get a patch in for comment 2 if no one else has done it by then.
cl
| Reporter | ||
Comment 4•20 years ago
|
||
Hrm; I tried to add keywords to folders and tab groups both last night, and they were discarded as soon as I left the field. Stuart, have you tried adding keywords to folders recently? Maybe something's regressed?
At any rate, we should fix comment 2 *and* fix the Info nib to 1) include the keyword field in the tab loop and 2) not discard the keywords ;)
Summary: Disable the keyword field in the Folder view of the BookmarksInfoPanel.nib → Fix the keyword field in the Folder view of the BookmarksInfoPanel.nib
| Assignee | ||
Comment 5•20 years ago
|
||
Smokey's Camino might be on crack. I can add keywords successfully to both tab groups and folders using the 08 May trunk nightly, *and* the keyword field is in the tab chain of the info window.
cl
| Assignee | ||
Comment 6•20 years ago
|
||
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #221773 -
Flags: review?(stuart.morgan)
Comment 7•20 years ago
|
||
Camino 1.0.1 / OS X 10.3.9
here's what I seem to be able to do at first glance
from the main bookmarks view I can edit keywords on individual items and tabgroups, but not normal folders (or spacers)
from the info window I can also add a keyword to folders that aren't tabgroups. using the keyword from the location bar makes them work like tabgroups
I don't see any behavior where text entered dissapears or flickers.. the items I can't edit in the view never turned a click into the text input area
Comment 8•20 years ago
|
||
Comment on attachment 221773 [details] [diff] [review]
fixes the inability to edit keywords on folders in the outline view
Yup. r=me.
My old 2006032900 (1.0+) has none of Smokey's issues.
Attachment #221773 -
Flags: superreview?
Attachment #221773 -
Flags: review?(stuart.morgan)
Attachment #221773 -
Flags: review+
| Reporter | ||
Updated•19 years ago
|
Attachment #221773 -
Flags: superreview? → superreview?(mikepinkerton)
Comment 9•19 years ago
|
||
Comment on attachment 221773 [details] [diff] [review]
fixes the inability to edit keywords on folders in the outline view
sr=pink
Attachment #221773 -
Flags: superreview?(mikepinkerton) → superreview+
| Reporter | ||
Updated•19 years ago
|
Summary: Fix the keyword field in the Folder view of the BookmarksInfoPanel.nib → Fix the inability to edit keywords on folders in the outline view
Whiteboard: [needs checkin]
Comment 10•19 years ago
|
||
fixed trunk and branch
Updated•19 years ago
|
Whiteboard: [needs checkin]
You need to log in
before you can comment on or make changes to this bug.
Description
•