Fix the inability to edit keywords on folders in the outline view (bug 337571)